(WEB-46) fixed the responsiveness on mobile

--- a/src/app/community/community.module.css
+++ b/src/app/community/community.module.css
@@ -52,7 +52,7 @@
 }
 
 .teamParagraph {
-  font-size: 24px;
+  font-size: 1.5rem;
   font-family: Raleway;
   font-weight: 700;
   margin: auto;
@@ -117,10 +117,36 @@
 
 @media (max-width: 480px) {
   .speakerList {
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .peopleList {
+    justify-content: center;
+    align-items: center;
+  }
+
+  .communityParagraph {
+    padding: 3rem 0;
+    font-size: 1.25rem;
+  }
+
+  .teamParagraph {
+    font-size: 1.25rem;
   }
 
   .title {
     font-size: 3rem;
+  }
+
+  .subtitle {
+    font-size: 2.5rem;
+    text-align: center;
+  }
+
+  .yearButton {
+    font-size: 1.25rem;
   }
 }
